firs bot training in spanish

--- a/domain.yml
+++ b/domain.yml
@@ -11,23 +11,25 @@ intents:
 
 responses:
   utter_greet:
-  - text: "Hey! How are you?"
+  - text: "Hola. ¿Cómo estas?"
+  - text: "Hola"
+  - text: "Konnichiwa"
 
   utter_cheer_up:
-  - text: "Here is something to cheer you up:"
+  - text: "aqui hay algo par animarte:"
     image: "https://i.imgur.com/nGF1K8f.jpg"
 
   utter_did_that_help:
-  - text: "Did that help you?"
+  - text: "fue de ayuda?"
 
   utter_happy:
-  - text: "Great, carry on!"
+  - text: "Gemial"
 
   utter_goodbye:
-  - text: "Bye"
+  - text: "Adios"
 
   utter_iamabot:
-  - text: "I am a bot, powered by Rasa."
+  - text: "Soy un bot"
 
 session_config:
   session_expiration_time: 60
