--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -4,88 +4,90 @@ nlu:
 - intent: greet
   examples: |
     - hey
-    - hello
+    - hola
     - hi
-    - hello there
-    - good morning
-    - good evening
-    - moin
-    - hey there
-    - let's go
+    - ola
+    - buenos días
+    - buenas tardes
+    - Konichiwa
+    - ola
+    - vamos
     - hey dude
-    - goodmorning
-    - goodevening
-    - good afternoon
+    - buenos días
+    - buenas tardes
+    - buenas noches
 
 - intent: goodbye
   examples: |
-    - cu
-    - good by
-    - cee you later
-    - good night
-    - bye
-    - goodbye
-    - have a nice day
-    - see you around
+    - Adios
+    - hasta la proxima
+    - hasta luego
+    - buenas noches
+    - Sayonara
+    - g
+    - ten un buen dia
+    - cuidate
     - bye bye
-    - see you later
+    - nos vemos luego
 
 - intent: affirm
   examples: |
-    - yes
-    - y
-    - indeed
-    - of course
-    - that sounds good
-    - correct
+    - si
+    - siuu
+    - claro que si
+    - por su puesto
+    - eso suena bien
+    - Correcto
 
 - intent: deny
   examples: |
     - no
-    - n
-    - never
-    - I don't think so
-    - don't like that
-    - no way
-    - not really
+    - nope
+    - nunca
+    - no me gusta esto
+    - no me gusta
+    - de ninguna manera
+    - en realidad no
 
 - intent: mood_great
   examples: |
-    - perfect
-    - great
-    - amazing
-    - feeling like a king
-    - wonderful
-    - I am feeling very good
-    - I am great
-    - I am amazing
-    - I am going to save the world
-    - super stoked
-    - extremely good
-    - so so perfect
-    - so good
-    - so perfect
+    - perfecto
+    - genial
+    - increíble
+    - sentirse como un rey
+    - maravilloso
+    - Me siento muy bien
+    - Estoy genial
+    - Soy increíble
+    - Voy a salvar el mundo
+    - súper contento
+    - extremadamente bien
+    - tan tan perfecto
+    - tan bueno
+    - tan perfecto
 
 - intent: mood_unhappy
   examples: |
-    - my day was horrible
-    - I am sad
-    - I don't feel very well
-    - I am disappointed
-    - super sad
-    - I'm so sad
-    - sad
-    - very sad
-    - unhappy
-    - not good
-    - not very good
-    - extremly sad
-    - so saad
-    - so sad
+    - mi día fue horrible
+    - estoy triste
+    - No me siento muy bien
+    - estoy decepcionado
+    - super triste
+    - estoy muy triste
+    - triste
+    - muy triste
+    - infeliz
+    - no bien
+    - no muy bien
+    - extremadamente triste
+    - tan saad
+    - muy triste
 
 - intent: bot_challenge
   examples: |
-    - are you a bot?
-    - are you a human?
-    - am I talking to a bot?
-    - am I talking to a human?
+    - ¿eres un bot?
+    - ¿eres humano?
+    - ¿estoy hablando con un bot?
+    - ¿estoy hablando con un humano?
+    - ¿que eres?
+    - ¿quien te creo?
