--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -5,7 +5,6 @@ nlu:
   examples: |
     - hey
     - hola
-    - hi
     - ola
     - buenos días
     - buenas tardes
@@ -16,7 +15,13 @@ nlu:
     - buenos días
     - buenas tardes
     - buenas noches
-
+    - ¿Qué más?
+    - ¿Qué onda?
+    - ¿Qué pasa?
+    - ¿Qué hubo?
+    - ¿Qué bola?
+    - ¿Qué chévere?
+    - ¿Qué fue?
 - intent: goodbye
   examples: |
     - Adios
@@ -80,7 +85,7 @@ nlu:
     - no bien
     - no muy bien
     - extremadamente triste
-    - tan saad
+    - tan triste
     - muy triste
 
 - intent: bot_challenge
