--- a/domain.yml
+++ b/domain.yml
@@ -1,5 +1,8 @@
 version: "3.1"
 
+actions:
+  - action_save_conversation
+
 intents:
   - greet
   - goodbye
@@ -24,6 +27,7 @@ responses:
 
   utter_happy:
   - text: "Gemial"
+
 
   utter_goodbye:
   - text: "Adios"
